[tool.poetry]
name = "headhanter"
version = "0.1.0"
description = ""
authors = ["GithubRedMouth <90645738+GithubRedMouth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "^2.0.0b17"
pytest = "^7.1.3"
allure-pytest = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
