[tool.poetry]
name = "headhanter"
version = "0.1.0"
description = ""
authors = ["GithubRedMouth <90645738+GithubRedMouth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0b17"
pytest = "^7.2.2"
allure-pytest = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
